--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/aos": "^3.0.4",
     "@types/react-medium-image-zoom": "^3.0.1",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-select": "^5.0.1",
     "@types/react-slick": "^0.23.8",
     "@zeit/next-css": "^1.0.1",
@@ -21,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-medium-image-zoom": "^4.3.5",
+    "react-paginate": "^8.1.2",
     "react-responsive": "^9.0.0-beta.6",
     "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
