--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-slick": "^0.23.8",
     "@zeit/next-css": "^1.0.1",
     "aos": "^3.0.0-beta.6",
+    "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
     "next": "12.1.0",
     "react": "17.0.2",
