--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react-medium-image-zoom": "^3.0.1",
     "@types/react-paginate": "^7.1.1",
     "@types/react-select": "^5.0.1",
@@ -20,6 +21,7 @@
     "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
     "next": "12.1.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
