--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
     "next": "12.1.0",
+    "next-seo": "^5.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
