--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "aos": "^3.0.0-beta.6",
     "html-react-parser": "^1.4.10",
     "install": "^0.13.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-video": "^0.6.3",
     "next": "12.1.0",
     "next-seo": "^5.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-medium-image-zoom": "^4.3.5",
     "react-paginate": "^8.1.2",
     "react-responsive": "^9.0.0-beta.6",
